--- a/bower.json
+++ b/bower.json
@@ -18,5 +18,8 @@
     "lodash": "~3.3.1",
     "moment": "~2.9.0",
     "twix": "~0.6.2"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.3.14"
   }
 }
