--- a/package.json
+++ b/package.json
@@ -14,5 +14,13 @@
     "gulp-connect": "^2.2.0",
     "gulp-inject": "^1.1.1",
     "gulp-sass": "^1.3.3"
+  },
+  "devDependencies": {
+    "jasmine-core": "^2.2.0",
+    "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-jasmine": "^0.3.5",
+    "karma-ng-scenario": "^0.1.0",
+    "karma-phantomjs-launcher": "^0.1.4"
   }
 }
