--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "devDependencies": {
     "jasmine-core": "^2.2.0",
+    "jasmine-expect": "^2.0.0-beta1",
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.5",
     "karma-ng-scenario": "^0.1.0",
-    "karma-phantomjs-launcher": "^0.1.4"
+    "karma-phantomjs-launcher": "^0.1.4",
+    "protractor": "^1.8.0"
   }
 }
