--- a/package.json
+++ b/package.json
@@ -8,19 +8,22 @@
   },
   "author": "Lee Brandt",
   "license": "ASF",
-  "dependencies": {
+  "devDependencies": {
     "browser-sync": "^2.1.6",
     "gulp": "^3.8.11",
     "gulp-connect": "^2.2.0",
     "gulp-inject": "^1.1.1",
-    "gulp-sass": "^1.3.3"
-  },
-  "devDependencies": {
+    "gulp-karma": "0.0.4",
+    "gulp-protractor": "0.0.12",
+    "gulp-sass": "^1.3.3",
+    "gulp-webserver": "^0.9.0",
     "jasmine-core": "^2.2.0",
     "jasmine-expect": "^2.0.0-beta1",
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.5",
+    "karma-mocha-reporter": "^1.0.2",
+    "karma-ng-html2js-preprocessor": "^0.1.2",
     "karma-ng-scenario": "^0.1.0",
     "karma-phantomjs-launcher": "^0.1.4",
     "protractor": "^1.8.0"
