--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "snapjs": "~1.9.3",
     "lodash": "~3.3.1",
     "moment": "~2.9.0",
-    "twix": "~0.6.2"
+    "twix": "~0.6.2",
+    "angular-base64": "~2.0.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.14"
